adding more programmes