@@ -1,4 +1,4 @@
-package com.interview.algorithms;
+package algorithm;
 
 import java.util.PriorityQueue;
 import java.util.Queue;
@@ -12,10 +12,10 @@ public class QueueDemo
 		q.add( 2 );
 		//System.out.println( q.remove() );
 		//System.out.println( q.peek() );
-		
-		Integer a = new Integer(10);
-		Integer b = new Integer(20);
-		System.out.println(Integer.valueOf( a ) + a.intValue() );
+
+		Integer a = new Integer( 10 );
+		Integer b = new Integer( 20 );
+		System.out.println( Integer.valueOf( a ) + a.intValue() );
 		assert a.intValue() + b.intValue() == 100;
 	}
 }
